# warehouse_visual

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  hooks.py  modules.txt  pyproject.toml
page/warehouse_view/: warehouse_view.js  warehouse_view.json  warehouse_view.py
public/css/: warehouse_view.css
public/js/: warehouse_view.js
warehouse_visual/: api.py  hooks.py
warehouse_visual/page/warehouse_view/: warehouse_view.js
warehouse_visual/public/warehouse_visualizer/: index.html
warehouse_visual/public/warehouse_visualizer/lib/: myWarehouseVisualizer.js
warehouse_visual/warehouse_visual/page/warehouse_view/: warehouse_view.js  warehouse_view.json
