[project]
name = "warehouse_visual"
version = "0.0.1"
description = "2D and 2.5D warehouse visualization for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"